4B/cs444/tests/site/pass/pass_publicfields.joos
/* pass: public fields */
public class A {
  public A() {}
  public int x;
}

