4B/cs444/tests/site/fail/fail_incrementanddecrement.joos
/* fail: increment and decrement */
public class A {
  public int m(int x) {
    x++; x--; ++x; return --x;
  }
}

